# procedural-py

./: .gitignore  Pipfile  README.md  pyproject.toml  utils.py
examples/: 2d_indoor.ipynb  mesh_only.ipynb  mesh_vwt.ipynb  parallel_checkMesh.ipynb  simple_vwt.ipynb  vwt_16.ipynb  vwt_serial.ipynb  wind_comfort.ipynb
examples/.ipynb_checkpoints/: mesh_vwt-checkpoint.ipynb
examples/data/indoor/: cfdGeom.stl  heatZone.__0.stl  heatZone.__1.stl  test.json  write_mesh.json  write_solution.json
examples/data/mesh_vwt/: cfdGeom.stl  probe_sets.json  write_mesh.json  write_solution.json
src/procedural/: __init__.py  client.py  file_handling.py
src/procedural/utils/: __init__.py  secrets.py
