[tool.poetry]
name = "procedural"
version = "0.1.0"
description = ""
authors = ["Christian Kongsgaard <christian@procedural.build>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
